API rework, better access & access control, config migration removed.
Refactored some of the API methods, specifically around TextDisplayHolograms, to allow for more access via the API. Removed the original 1.0 & 1.5 config migrators.